Replace deprecated URL constructor globally
java.net.URL(String) has been deprecated since JDK 20, and causes the
build to fail in some instances. Use the new URI(schemaFile).toURL instead,
which is non-deprecated and available on all supported JDK versions.

DAFFODIL-3083